[add] 本一覧ページ実装

--- a/app/views/homes/about.html.slim
+++ b/app/views/homes/about.html.slim
@@ -7,11 +7,9 @@
         | 表紙買いを
         br
         | どこでも
-        
-      = link_to 
 
-      p.start_now.btn.btn-primary
-        | 今すぐ本を探す
+      = link_to "今すぐ本を探す", books_path, class:"btn.btn-primary"
+
 
     .col-md-5.col-offset-1
       .bg-primary
