--- a/app/views/books/index.html.slim
+++ b/app/views/books/index.html.slim
@@ -1,2 +1,12 @@
-h1 Books#index
-p Find me in app/views/books/index.html.slim
+.container
+  .col-md-10
+    .row.flex-wrap
+    - @books.each do |book|
+      = link_to  "#{book.item_url}", class:"col-2 m-1" do
+        = image_tag book.large_image_url, :width => '18%', :height => '18%'
+
+    .row
+      - if @books.previous_page?
+        = link_to "前のページ", books_path(page: @page - 1, keyword: @keyword)
+      - if @books.next_page?
+        = link_to "次のページ", books_path(page: @page + 1, keyword: @keyword)
