--- a/app/views/homes/about.html.slim
+++ b/app/views/homes/about.html.slim
@@ -1,17 +1,58 @@
+.about_bg
+  .container
+    .row
+      .col-md-6
+        h1.title
+          | 表紙買いを
+          br
+          | どこでも
+
+        = link_to "今すぐ本を探す", books_path(keyword: "少年", page: rand(100)), class:"btn about_find_book"
+
+      .col-md-5.col-offset-1
+        .bg-primary
+          h1
+            | プレビューが入る
+
+      .about_border
+      .row
+        .about_whatjacket_left.col-md-5
+          = image_tag "about_what_jacket.jpg", :width => '150%', :height => '150%', class:"img-fluid"
+        .about_whatjacket_right.col-md-6
+          h1
+            | 表紙買い
+            span
+              | って何？
+          p
+            | 書店で表紙のデザインだけを見て直感で買うこと
+
+      .about_border
+      .row
+        .col-md-12
+          h1
+            | BookMarksってなに？
+          p
+            | インターネットで表紙買いできるサービス
+
+      .row
+        .col-md-12.d-inline-block
+          .col-4.d-md-inline-block
+            = image_tag "about1.png", :width => '130%', :height => '130%', class:"img-fluid　h-100"
+            h2
+              | 本を読むすべての方に！
+            p
+              | 読みたい本がすぐに見つかる！
+          .col-4.d-md-inline-block
+            = image_tag "about2.png", :width => '130%', :height => '130%', class:"img-fluid　h-100"
+            h2
+              | インターネットでも表紙買いしたい方に！
+            p
+              | 表紙を一気に見ることができる！
+          .col-4.d-md-inline-block
+            = image_tag "about3.png", :width => '130%', :height => '130%', class:"img-fluid　h-100"
+            h2
+              | 本好きな人同士繋がりたい方に！
+            p
+              | SNS機能でコミュニティが広がる！
 
 
-.container
-  .row
-    .col-md-6
-      h1.title
-        | 表紙買いを
-        br
-        | どこでも
-
-      = link_to "今すぐ本を探す", books_path, class:"btn.btn-primary"
-
-
-    .col-md-5.col-offset-1
-      .bg-primary
-        h1
-          | プレビューが入る
