[add] 本詳細ページ実装

--- a/app/views/books/index.html.slim
+++ b/app/views/books/index.html.slim
@@ -2,8 +2,8 @@
   .col-12
     .row.flex-wrap.mt-3
     - @books.each do |book|
-      = link_to  "#{book.item_url}", class:"col-2 m-1" do
-        = image_tag book.large_image_url, :width => '18%', :height => '18%'
+      = link_to books_path(book: Book.book_details(book)), method: :post, local: true, class:"col-2 m-1" do
+        = image_tag book.large_image_url.chomp("?_ex=200x200"), :width => '20%', :height => '20%'
 
     .row
       - if @books.previous_page?
