--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,15 +14,31 @@
  *= require_self
 */
 @import "bootstrap";
+@import "font-awesome-sprockets";
+@import "font-awesome";
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
 body{
  font-family: 'Kosugi', sans-serif;
+ background-color:  #FAFAFA;
+}
+
+header{
+  background-color: white;
 }
 
 // headerページ
+.header{
+  border-bottom: 1px solid #5B5B5B;
+}
 .header_find_book{
   color: black;
-  background-color: #fff100;
+  background-color: #FFE100;
   border-bottom: 5px solid #ccc100;
 }
 
@@ -39,7 +55,7 @@ body{
 
 .about_find_book{
   color: black;
-  background-color: #fff100;
+  background-color: #FED94D;
   border-bottom: 5px solid #ccc100;
 }
 
@@ -53,3 +69,28 @@ body{
   background-blend-mode:lighten;
 }
 
+
+//detailページ
+.detail{
+  color:#5B5B5B;
+}
+
+.detail_read_icon{
+  font-size: 40px;
+}
+
+.detail_read_text{
+  font-size: 18px;
+}
+
+.detail_unread_icon{
+  font-size: 40px;
+}
+
+.detail_unread_text{
+  font-size: 18px;
+}
+
+.detail_comment_text{
+  font-size: 18px;
+}
