--- a/app/views/devise/registrations/new.html.slim
+++ b/app/views/devise/registrations/new.html.slim
@@ -1,6 +1,6 @@
 h2
   = t(".sign_up")
-= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
+= form_with model: @user, url: user_registration_path, local: true do |f|
   = render "devise/shared/error_messages", resource: resource
   .field
     = f.label :email
@@ -8,18 +8,17 @@ h2
       | ※必須
     br
     = f.email_field :email, autofocus: true, autocomplete: "email"
-  .field
-    = f.label :name
-    small
-      | ※必須
-    br
-    = f.text_field :name, autocomplete: "name"
+
   .field
     = f.label :name_id
     small
       | ※必須
     br
     = f.text_field :name_id, autocomplete: "name_id"
+
+  .field
+    - f.hidden_field :name, :value => @user.name_id
+
   .field
     = f.label :password
     - if @minimum_password_length
