--- a/app/views/books/_review.html.slim
+++ b/app/views/books/_review.html.slim
@@ -9,7 +9,22 @@ p.mt-5
       .col-md-11
         h4
           = review.user.name_id
+
+        div id="rate_#{review.id}"
+        javascript:
+          $("#rate_#{review.id}").raty({
+            size: 20,
+            starOff: "#{asset_path('star-off.png')}",
+            starOn: "#{asset_path('star-on.png')}",
+            starHalf: "#{asset_path('star-half.png')}",
+            half: true,
+            readOnly: true,
+            score: "#{review.rate}",
+          });
+
         p
           = review.comment
         p.text-right
           = review.created_at.strftime('%Y/%m/%d')
+
+
