--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -34,7 +34,7 @@ header{
 
 // headerページ
 .header{
-  border-bottom: 1px solid #5B5B5B;
+  border-bottom: 1px solid #707070;
 }
 .header_find_book{
   color: black;
@@ -60,17 +60,24 @@ header{
 }
 
 .about_border{
-  border-bottom: 5px solid #black;
+  border-bottom: 1px solid #5B5B5B;
 }
 
 .about_whatjacket_left{
   background-image: url("about_what_jacket.jpg");
-  // background-color:rgba(255,255,255,0.8);
   background-blend-mode:lighten;
 }
 
+// user-showページ
+.user_flex_box{
+  border-bottom: 1px solid #707070;
+}
 
-//showページ
+// .user-review-item{
+//   border-bottom: 1px solid #707070;
+// }
+
+//book-showページ
 .show{
   color:#5B5B5B;
 }
