--- a/app/views/layouts/_header.html.slim
+++ b/app/views/layouts/_header.html.slim
@@ -7,7 +7,7 @@
       ul.nav.navbar.justify-content-center
         li.nav-item
           = form_with url: books_path, method: :get, local: true, class:"form-inline" do |f|
-            = f.text_field :keyword, class:"form-control ml-5"
+            = f.text_field :keyword, required: true, class:"form-control ml-5"
             = f.submit "検索", class:"btn btn-secondary my-2"
 
 
@@ -17,6 +17,10 @@
             = link_to "本を探す", books_path(keyword: "少年", page: rand(100)), class:"nav-link header_find_book"
           li.nav-item
             = link_to "ログアウト", destroy_user_session_path, method: :delete, class:"nav-link"
+          li.nav-item
+            = link_to user_path(current_user.id), class:"nav-link" do
+              i.fas.fa-user
+
         - else
           li.nav-item
             = link_to "ログイン", new_user_session_path, class:"nav-link text-secondary"
@@ -24,3 +28,6 @@
             = link_to "新規登録", new_user_registration_path, class:"nav-link text-secondary"
           li.nav-item
             = link_to "本を探す", books_path(keyword: "少年", page: rand(100)), class:"nav-link header_find_book"
+          li.nav-item
+            = link_to "本を探す", books_path(keyword: "少年", page: rand(100)), class:"nav-link header_find_book" do
+              i.fas.fa-user
