[add] ユーザー詳細ページ-フォロー機能

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -73,6 +73,10 @@ header{
   border-bottom: 1px solid #707070;
 }
 
+.user_follow_list{
+  border-bottom: 1px solid #707070;
+}
+
 // .user-review-item{
 //   border-bottom: 1px solid #707070;
 // }
