--- a/app/views/books/show.html.slim
+++ b/app/views/books/show.html.slim
@@ -18,17 +18,33 @@
 
   .row
     .col-md-6.offset-6
-      .col-md-3.d-inline
-        = render "read", book: @book, book_read: @book_read
+      - if user_signed_in?
+        .col-md-3.d-inlin e
+          = render "read", book: @book, book_read: @book_read
 
-      .col-md-3.d-inline.show_unread_icon
-        = render "unread", book: @book
+        .col-md-3.d-inline.show_unread_icon
+          = render "unread", book: @book
 
+        .col-md-3.d-inline
+          span.show_comment_text.ml-3
+            | コメントする
+      - else
+        .col-md-3.d-inline
+          a.book_show_readoff.p-2 type= "button" data-toggle= "modal" data-target= "#read_modal"
+            i.fas.fa-bookmark.show_read_icon
+            span.show_read_text.ml-3
+              | 読んだ！
 
+        .col-md-3.d-inline.show_unread_icon
+          = link_to book_book_unreads_path(@book), method: :post, local: true, class: "book_show_unreadoff p-2" do
+            i.fas.fa-book.show_unread_icon
+            span.show_unread_text.ml-3
+              | 読みたい！
 
-      .col-md-3.d-inline
-        span.show_comment_text.ml-3
-          | コメントする
+        .col-md-3.d-inline
+          span.show_comment_text.ml-3
+            | コメントする
+
 
   .row
     .col-md-11.offset-1
