--- a/app/views/layouts/_header.html.slim
+++ b/app/views/layouts/_header.html.slim
@@ -14,6 +14,8 @@
       ul.nav.navbar.ml-auto
         - if user_signed_in?
           li.nav-item
+            = link_to "About", root_path, class:"nav-link text-secondary"
+          li.nav-item
             = link_to "本を探す", books_path(keyword: "少年", page: rand(100)), class:"nav-link header_find_book"
           li.nav-item
             = link_to "ログアウト", destroy_user_session_path, method: :delete, class:"nav-link"
@@ -23,11 +25,11 @@
 
         - else
           li.nav-item
+            = link_to "About", root_path, class:"nav-link text-secondary"
+          li.nav-item
             = link_to "ログイン", new_user_session_path, class:"nav-link text-secondary"
           li.nav-item
             = link_to "新規登録", new_user_registration_path, class:"nav-link text-secondary"
           li.nav-item
             = link_to "本を探す", books_path(keyword: "少年", page: rand(100)), class:"nav-link header_find_book"
-          li.nav-item
-            = link_to "本を探す", books_path(keyword: "少年", page: rand(100)), class:"nav-link header_find_book" do
-              i.fas.fa-user
+
