--- a/app/views/users/_follow.html.slim
+++ b/app/views/users/_follow.html.slim
@@ -4,10 +4,11 @@
 
 - user.followings.each do |follow_user|
   .col-md-12
-    .user_follow_list
+    .user_follow_list.mt-3
       .user_follow_info.d-inline-block
-        = attachment_image_tag follow_user, :image, size: "80x80", fallback: "cat1.jpg", class: "rounded-circle mr-4"
-        = follow_user.name
+        = link_to user_path(follow_user.id) do
+          = attachment_image_tag follow_user, :image, size: "80x80", fallback: "noimage.jpg", class: "rounded-circle mr-4"
+          = follow_user.name
 
       .user_follow_detail.offset-1
         span.ml-3
