--- a/app/views/users/_follower.html.slim
+++ b/app/views/users/_follower.html.slim
@@ -4,10 +4,11 @@
 
 - user.followers.each do |follower_user|
   .col-md-12
-    .user_follow_list
+    .user_follow_list.mt-3
       .user_follow_info.d-inline-block
-        = attachment_image_tag follower_user, :image, size: "80x80", fallback: "cat1.jpg", class: "rounded-circle mr-4"
-        = follower_user.name
+        = link_to user_path(follower_user.id)
+          = attachment_image_tag follower_user, :image, size: "80x80", fallback: "noimage.jpg", class: "rounded-circle mr-4"
+          = follower_user.name
 
       .user_follow_detail.offset-1
         span.ml-3
