[add] 本ランキングページ実装

--- a/app/views/books/index.html.slim
+++ b/app/views/books/index.html.slim
@@ -1,14 +1,18 @@
 .container
-  .col-12
-    .row.flex-wrap.mt-3
-    - @books.each do |book|
-      = link_to books_path(book: Book.book_details(book)), method: :post, local: true, class:"col-2 m-1" do
-        = image_tag book.large_image_url.chomp("?_ex=200x200"), :width => '20%', :height => '20%'
+  .row
+    .col-md-6.ml-3
+      = render "sort"
 
-    .row.d-flex.justify-content-center.my-3
-      - if @books.previous_page?
-        h4
-          = link_to "前のページ", books_path(keyword: @keyword, page: @page - 1), class:"btn btn-secondary mx-2"
-      - if @books.next_page?
-        h4
-          = link_to "次のページ", books_path(keyword: @keyword, page: @page + 1, ), class:"btn btn-secondary mx-2"
+  .row
+    .col-md-12
+      - @books.each do |book|
+        = link_to books_path(book: Book.book_details(book)), method: :post, local: true, class:"col-2 m-1" do
+          = image_tag book.large_image_url.chomp("?_ex=200x200"), :width => '20%'
+
+      .row.d-flex.justify-content-center.my-3
+        - if @books.previous_page?
+          h4
+            = link_to "前のページ", books_path(keyword: @keyword, page: @page - 1), class:"btn btn-secondary mx-2"
+        - if @books.next_page?
+          h4
+            = link_to "次のページ", books_path(keyword: @keyword, page: @page + 1, ), class:"btn btn-secondary mx-2"
