--- a/app/views/homes/about.html.slim
+++ b/app/views/homes/about.html.slim
@@ -7,7 +7,7 @@
           br
           | どこでも
 
-        = link_to "今すぐ本を探す", books_path(keyword: "少年", page: rand(100)), class:"btn about_find_book"
+        = link_to "今すぐ本を探す", books_path(keyword: "本", page: rand(100)), class:"btn about_find_book"
 
       .col-md-5.col-offset-1
         .bg-primary
