--- a/app/views/books/_read.html.slim
+++ b/app/views/books/_read.html.slim
@@ -6,8 +6,10 @@
 
 -else
   a.book_show_readoff.p-2 type= "button" data-toggle= "modal" data-target= "#read_modal"
-    i.fas.fa-bookmark.show_read_icon
-    span.show_read_text.ml-3
+    i.fas.fa-bookmark.show_read_icon.d-inline
+    p
+      | aa
+    p.show_read_text.ml-3.d-inline
       | 読んだ！
 
 .modal.fade#read_modal tabindex= "-1" role= "dialog" aria-labelledby= "read_modal_label" aria-hidden= "true"
