--- a/app/views/books/_review.html.slim
+++ b/app/views/books/_review.html.slim
@@ -32,3 +32,25 @@ p.mt-5
           = review.created_at.strftime('%Y/%m/%d')
 
 
+      .col-md-6.ml-3
+        - if user_signed_in?
+          - if review.favorited_by?(current_user)
+            span
+              = link_to book_book_read_read_favorites_path(review.book, review), method: :delete do
+                i.fas.fa-heart いいね済
+          - else
+            span
+              = link_to book_book_read_read_favorites_path(review.book, review), method: :post do
+                i.fas.fa-heart いいね
+
+          span.ml-3
+            = link_to book_book_read_path(review.book, review, user: review.user_id)
+              i.fas.fa-comments コメントする
+        - else
+            span
+              = link_to new_user_session_path
+                i.fas.fa-heart いいね
+
+            span.ml-3
+              = link_to new_user_session_path
+                i.fas.fa-comments コメントする
