--- a/app/views/users/_read.html.slim
+++ b/app/views/users/_read.html.slim
@@ -9,7 +9,7 @@
     div id="rate_#{book_read.id}"
     = book_read.comment.truncate(50)
     - if book_read.comment.size > 50
-      = link_to "続きを読む", book_book_reads_path(book_read.book_id, user: book_read.user_id)
+      = link_to "続きを読む", book_book_read_path(book_read.book_id,book_read, user: book_read.user_id)
     p.mt-3
       = book_read.created_at.strftime('%Y/%m/%d')
 
