--- a/app/views/layouts/_header.html.slim
+++ b/app/views/layouts/_header.html.slim
@@ -2,7 +2,7 @@
   .col-12
     nav.navbar
       = link_to root_path
-        = image_tag "bookmarks.png", :width => '15%', :height => '15%', class:"navbar-brand ml-2"
+        = image_tag asset_path("bookmarks.png"), :width => '15%', :height => '15%', class:"navbar-brand ml-2"
 
       ul.nav.navbar.justify-content-center
         li.nav-item
